Tagging/force-app/main/default/objects/Contact_Tag__c/Contact_Tag__c.object-meta.xml
<CustomObject>
    <description>The object provides information on the tags that are associated with contact.</description>
    <label>Contact Tag</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>