Tagging/force-app/main/default/objects/Contact_Tag__c/fields/Contact_Tag_Key__c.field-meta.xml
<CustomField>
    <fullName>Contact_Tag_Key__c</fullName>
    <description>This field is a unique key for the contactTag__c object which is a combination of ContactId and TagId.</description>
    <externalId>true</externalId>
    <label>Contact_Tag_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>