Tagging/force-app/main/default/objects/Contact_Tag__c/fields/CP_Stage__c.field-meta.xml
<CustomField>
    <fullName>CP_Stage__c</fullName>
    <description>This field represents 4 stages of Corporate Partner, i.e., CP Verified, CP Eligible, Benefit Ready, Benefit Applied</description>
    <label>CP Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>verified_image</fullName>
                <label>CP Verified</label>
            </value>
            <value>
                <fullName>CP_Eligible</fullName>
                <label>CP Eligible</label>
            </value>
            <value>
                <fullName>Benefit_Ready</fullName>
                <label>Benefit Ready</label>
            </value>
            <value>
                <fullName>Benefit_Applied</fullName>
                <label>Benefit Applied</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>