Tagging/force-app/main/default/objects/Contact_Tag__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field shows  whether the ContactTag is active for the individual tag that are affiliated to a specific contact.</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>