Tagging/force-app/main/default/objects/Contact_Tag__c/fields/Tag_Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tag_Removal_Reason__c</fullName>
    <label>Tag_Removal_Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>por diversión</fullName>
            </value>
            <value>
                <fullName>Sin razón</fullName>
            </value>
            <value>
                <fullName>esta lloviendo</fullName>
            </value>
            <value>
                <fullName>inválido</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Requirements</fullName>
            </value>
            <value>
                <fullName>No Longer With Benefit Employer</fullName>
            </value>
            <value>
                <fullName>Wrong Tag</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
                <isActive>false</isActive>
                <label>No Longer Interested</label>
            </value>
            <value>
                <fullName>No sé por qué estaba presente la etiqueta</fullName>
                <isActive>false</isActive>
                <label>No sé por qué estaba presente la etiqueta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>