Tagging/force-app/main/default/objects/Contact_Tag__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <formula>if(TEXT(CP_Stage__c) == &apos;verified_image&apos;,&quot;/resource/verified_image&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verification</label>
    <type>Text</type>
</CustomField>