Tagging/force-app/main/default/objects/Contact_Tag__c/fields/Verified_Image__c.field-meta.xml
<CustomField>
    <fullName>Verified_Image__c</fullName>
    <description>This field provides the verified image on the contact tag.</description>
    <label>Verified_Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>